# MacForthIntel

./: .gitignore  CMakeLists.avx512  CMakeLists.txt  README.md  main.cpp  safety.md
docs/: Dictionary.md  Let Statements.md  Words.md  forth.f
docs/adrs/: 001-ADR-SingletonClasses.md  002-ADR - JIT-selection.md  003-ADR - Testing suite.md  004-ADR - Compatibility.md  005-ADR - code generation.md  006-ADR - Simple Optimizer.md  007-ADR-Registers and Stacks.md  008-ADR-Dictionary Entries.md  009-ADR - Let statement.md  010-ADR - non intrusive structured data.md  014-ADR Register Allocator for floats.md
include/: CaseStatementManager.h  CodeGenerator.h  Compiler.h  DataStack.h  FlowLabels.h  ForthDictionary.h  ForthDictionaryEntry.h  ForthSystem.h  Interpreter.h  JitContext.h  LabelManager.h  LetCodeGenerator.h  LexLet.h  LineReader.h  LocalsHandler.h  Optimizer.h  ParseLet.h  Quit.h  RegisterTracker.h  ReturnStack.h  Settings.h  SignalHandler.h  Singleton.h  StringsStorage.h  SymbolTable.h  Tokenizer.h  VariableStorage.h  WordHeap.h
src/: CodeGenerator.cpp  Compiler.cpp  DataStack.cpp  ForthDictionary.cpp  ForthSystem.cpp  Interpreter.cpp  LetCodeGenerator.cpp  LineReader.cpp  LocalsHandler.cpp  Optimizer.cpp  Quit.cpp  ReturnStack.cpp  SignalHandler.cpp  Tokenizer.cpp  VariableStorage.cpp
tests/: testForthDictionary.cpp  test_CodeGenerator.cpp  test_JitContext.cpp  test_Tokenizer.cpp
